# rust-raspi-motion-detector

./: .env  Cargo.toml  README.md  mediamtx.yml  motion_detect.service
frontend/: index.html  login.html  motion_detector_controls.html  play_videos.html  start_motion_detector.html  stream.html  watch_stream.html
frontend/static/: config.js  script.js
src/: lib.rs  main.rs
src/app/: app.rs  file_stream.rs  middleware.rs  mod.rs  routes.rs  task.rs  web_routes.rs
src/camera/: camera.rs  mod.rs  webrtc.rs
src/camera/object_detect/: object_detect.json
src/email_alert/: email.rs
src/motion_detect/: gpio.rs
