[package]
name = "motion_detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = "0.4.31"
dotenvy = "0.15.7"
libc = "0.2.155"
log = "0.4.20"
mail-send = "0.4.4"
rppal = "0.19.0"
tokio = {version = "1.35.1", features = ["full"]}
tokio-rustls = {version = "0.26.0"}
redis = "0.26.1"
serde = "1.0.210"
serde_json = "1.0.129"