[package]
name = "motion_detector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
bytes = "1.9.0"
chrono = "0.4.31"
dotenvy = "0.15.7"
libc = "0.2.155"
log = "0.4.20"
futures-util = "0.3.31"
mail-send = "0.4.4"
http = "1.2.0"
rppal = "0.22.1"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io-util"] }
tokio-rustls = {version = "0.26.1"}
glob = "0.3.2"
serde = "1.0.210"
serde_json = "1.0.139"
ffmpeg-next = {version = "7.1.0", features = ["rpi"]}
http-range-header = "0.4.2"
